# datamancer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  datamancerd.toml  deny.toml  omniscient.toml  release-plz.toml  rust-toolchain.toml
.github/scripts/: semver-checks.sh
.github/workflows/: ci.yml  e2e.yml  release-plz.yml
.omniscient/: meta.json
.omniscient/lance/__manifest/_transactions/: 0-de64ee3f-6130-44f5-96cd-c48eee262ddb.txn
.omniscient/lance/chunks.lance/_transactions/: 0-5dba2ce5-ff84-4967-a973-76b317c75b57.txn  1-c136630f-8095-473a-9424-81bfef6cb2d4.txn  10-62cc0d51-0232-4d80-aa92-d59250eafee7.txn  11-2e27dd05-1f65-48d0-8244-df70bca98fdb.txn  12-70319ebf-8cc7-44ca-88b4-4b3573355973.txn  13-43cb2209-cb0a-4b16-bb99-ede21b289527.txn  14-328a3a7e-3912-4c14-83ca-d96071e77578.txn  15-e92c8f02-5d6e-44e4-a493-24cfebab1131.txn  16-1b7f1e1b-a7f3-4fe9-9eb1-6df1865ff800.txn  (+76 more)
crates/datamancer/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  lib.rs
crates/datamancer-client/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/datamancer-client/src/: client.rs  codes.rs  error.rs  iceoryx2.rs  iox2.rs  lib.rs  paths.rs  pipe_control.rs  spec.rs  win_pipe.rs  ws.rs
crates/datamancer-client/src/app/: error.rs  lifecycle.rs  mod.rs  platform.rs  platform_windows.rs
crates/datamancer-client/src/protocol/: mod.rs  uds.rs  ws.rs
crates/datamancer-core/: CHANGELOG.md  CLAUDE.md  Cargo.toml
crates/datamancer-core/src/: adjustment.rs  capabilities.rs  credentials.rs  error.rs  event.rs  health.rs  instrument.rs  lib.rs  price.rs  quantity.rs  snapshot.rs
crates/datamancer-core/src/traits/: mod.rs  provider.rs  sink.rs  storage.rs
crates/datamancer-credentials/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/datamancer-credentials/src/: file.rs  keychain.rs  lib.rs
crates/datamancer-transport-iceoryx2/: CLAUDE.md  Cargo.toml
crates/datamancer-transport-iceoryx2/src/: diagnostics.rs  error.rs  lib.rs  naming.rs  payload.rs  sink.rs  subscriber.rs  symbol_table.rs
crates/datamancer-transport-iceoryx2/tests/: iceoryx2_runtime.rs
crates/datamancer-transport-ws/: CLAUDE.md  Cargo.toml  README.md
crates/datamancer-transport-ws/src/: error.rs  lib.rs  sink.rs  wire.rs  writer.rs
crates/datamancer-winsec/: CLAUDE.md  Cargo.toml
crates/datamancer-winsec/src/: ffi.rs  integrity.rs  lib.rs
crates/datamancer/examples/: cached_history.rs  client_session.rs  crypto_ticker.rs  fetch_aapl_eod.rs  resume.rs  subscription.rs  tap_replay.rs
crates/datamancer/src/: accounting.rs  client.rs  commands.rs  error.rs  event.rs  fetch_locks.rs  inner.rs  instrument.rs  lib.rs  main.rs  price.rs  session.rs  streaming_client.rs  subscription.rs
crates/datamancer/src/alpaca/: alpaca_streaming_client.rs  mod.rs
crates/datamancer/src/providers/: alpaca.rs  alpaca_crypto.rs  credentials.rs  mod.rs  runtime.rs
crates/datamancer/src/storage/: coverage.rs  mod.rs  surreal.rs  surreal_tap_log.rs  turso.rs  turso_common.rs  turso_tap_log.rs
crates/datamancer/src/subscriptions/: alpaca.rs  mod.rs
crates/datamancer/src/traits/: mod.rs  provider.rs
crates/datamancer/tests/: alpaca_real.rs  client_session.rs  historical_cache.rs  instrument_catalog.rs  introspection.rs  resume.rs  session_integration.rs  surface_routing.rs  surreal_cache.rs  surreal_tap_log.rs  turso_cache.rs  turso_crash.rs  turso_tap_log.rs
crates/datamancerd/: CHANGELOG.md  Cargo.toml  README.md
crates/datamancerd/src/: config.rs  config_class.rs  config_hub.rs  control.rs  credentials.rs  error.rs  main.rs  paths.rs  server.rs  shutdown.rs  single_instance.rs  win_control.rs
crates/datamancerd/src/web/: config_api.rs  handlers.rs  metrics.rs  mod.rs  refresh.rs  settings.rs  state.rs  testdata.rs  ui.rs
crates/datamancerd/src/ws/: conn.rs  listener.rs  mod.rs  protocol.rs
crates/datamancerd/tests/: app_facade_e2e.rs  client_transport_e2e.rs  config_service_e2e.rs  credential_broker_e2e.rs  daemon_e2e.rs  health_observability_e2e.rs  ws_e2e.rs
docs/: adjusted-bars-request.md  windows-native-build.md
docs/superpowers/plans/: 2026-05-29-historical-read-through-cache.md  2026-05-30-surreal-tap-log-live-write-through.md  2026-06-14-single-flight-cache-fetch.md  2026-06-28-phase-1-eventsink-seam-plan.md  2026-06-28-phase-2-client-session-plan.md  2026-06-28-phase-3-introspection-interfaces-plan.md  2026-06-28-phase-4-iceoryx2-sink-plan.md  2026-06-28-phase-5-datamancerd-plan.md  2026-06-28-phase-6-web-ui-plan.md  2026-06-28-server-plan-consistency-report.md  2026-06-28-server-research-dossier.md  2026-07-01-datamancerd-config-management.md  2026-07-02-websocket-client-interface.md  2026-07-03-ci-pipeline.md  2026-07-03-turso-storage-port.md  2026-07-03-unified-client-transport.md  2026-07-04-datamancerd-single-instance-lock.md  2026-07-05-app-facade-cycle1.md  2026-07-05-config-service-cycle3.md  2026-07-05-credential-broker-cycle2.md  2026-07-05-health-observability-cycle4.md  2026-07-18-live-latest-seed.md  2026-07-19-windows-phase4-ws-loopback.md  2026-07-20-windows-config-service-e2e.md  2026-07-20-windows-daemon-ws-only-boot.md
docs/superpowers/reviews/: 2026-06-29-coderabbit-pr8-triage.md
docs/superpowers/specs/: 2026-05-29-historical-read-through-cache-design.md  2026-05-30-surreal-tap-log-live-write-through-design.md  2026-06-14-consumer-transport-seam-design.md  2026-06-14-single-flight-cache-fetch-design.md  2026-06-28-datamancer-server-roadmap.md  2026-07-01-datamancerd-config-management-design.md  2026-07-02-websocket-client-interface-design.md  2026-07-03-client-transport-surface-review.md  2026-07-03-fixed-point-quantity-design.md  2026-07-03-open-sourcing-design.md  2026-07-03-turso-storage-design.md  2026-07-03-unified-client-transport-design.md  2026-07-04-datamancerd-single-instance-lock-design.md  2026-07-05-app-facing-daemon-design.md  2026-07-15-native-windows-support-design.md  2026-07-18-live-latest-seed-design.md  2026-07-18-windows-phase4-ws-loopback-design.md  2026-07-20-windows-daemon-ws-only-boot-design.md
