[workspace]
members = [
    "crates/datamancer",
    "crates/datamancer-client",
    "crates/datamancer-core",
    "crates/datamancer-transport-iceoryx2",
    "crates/datamancer-transport-ws",
    "crates/datamancerd",
]
resolver = "3"

[workspace.dependencies]
fastrand = "2"
futures = "0.3"
serde_json = "1"
thiserror = "2"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["net", "macros", "rt-multi-thread", "sync", "time", "tracing"]
default-features = false

[workspace.dependencies.tokio-stream]
version = "0.1"
features = ["sync"]
default-features = false

# Workspace-wide lints. Member crates opt in via `[lints] workspace = true`.
# `priority = -1` lets individual lints override the group level when needed.
[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
