[workspace]
members = [
    "crates/datamancer",
    "crates/datamancer-client",
    "crates/datamancer-core",
    "crates/datamancer-credentials",
    "crates/datamancer-transport-iceoryx2",
    "crates/datamancer-transport-ws",
    "crates/datamancerd",
]
resolver = "3"

# Single source of truth for the version of every workspace crate. All crates
# set `version.workspace = true`; release-plz bumps this one field. Keeping the
# whole workspace on one version makes the datamancer-client ↔ datamancerd
# ping-gate lockstep structural (see crates/datamancerd/src/server.rs).
[workspace.package]
version = "0.7.0"

[workspace.dependencies]
fastrand = "2"
futures = "0.3"
serde_json = "1"
thiserror = "2"

[workspace.dependencies.serde]
version = "1"
# `rc` is load-bearing: `datamancer-core::SystemSnapshot` is served as
# `Json<Arc<SystemSnapshot>>` (crates/datamancerd/src/web/handlers.rs), which
# needs `Arc<T>: Serialize`. Previously activated transitively via the
# surrealdb dependency tree's own `serde/rc` feature (cargo unifies features
# workspace-wide); now that surrealdb is gone, it must be requested directly.
features = ["derive", "rc"]

[workspace.dependencies.tokio]
version = "1"
features = ["net", "macros", "rt-multi-thread", "sync", "time", "tracing"]
default-features = false

[workspace.dependencies.tokio-stream]
version = "0.1"
features = ["sync"]
default-features = false

# Workspace-wide lints. Member crates opt in via `[lints] workspace = true`.
# `priority = -1` lets individual lints override the group level when needed.
[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
