[package]
name = "datamancer-core"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
