[package]
name = "datamancer-transport-iceoryx2"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
description = "iceoryx2 zero-copy transport sink for datamancer (data + diagnostics planes)"

[dependencies]
datamancer-core = { path = "../datamancer-core", version = "0.6.0" }
iceoryx2 = "0.9.2"
iceoryx2-bb-container = "0.9.2"
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
