[package]
name = "datamancer-transport-ws"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
description = "WebSocket client transport for datamancer (single bidirectional connection: JSON control + event frames)"

[dependencies]
datamancer-core = { path = "../datamancer-core" }
async-trait = "0.1"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.29.0"

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
