[package]
name = "datamancer-winsec"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Windows security primitives (token/handle identity and integrity) shared by the datamancerd control channel"

[lints]
workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
