[package]
name = "datamancer"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["provider-alpaca", "storage-surreal"]
provider-alpaca = ["dep:oxidized_alpaca", "dep:chrono"]
storage-surreal = ["dep:surrealdb", "dep:chrono", "dep:serde"]
storage-turso = ["dep:turso", "dep:serde", "dep:serde_json"]
transport-iceoryx2 = ["dep:datamancer-transport-iceoryx2"]
transport-ws = ["dep:datamancer-transport-ws"]
client-ws = ["dep:datamancer-client", "datamancer-client/ws"]
client-iceoryx2 = ["dep:datamancer-client", "datamancer-client/iceoryx2"]

[dependencies]
async-trait = "0.1"
datamancer-core = { path = "../datamancer-core" }
fastrand = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = "0.1"

# provider-alpaca
oxidized_alpaca = { git = "https://github.com/VoidstarSolutions/oxidized-alpaca", branch = "main", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"], optional = true }

# storage-surreal
surrealdb = { version = "3.0", optional = true, default-features = false, features = ["kv-mem", "kv-surrealkv"] }
serde = { workspace = true, optional = true }

# storage-turso
turso = { version = "0.6", optional = true, default-features = false }
serde_json = { workspace = true, optional = true }

# transport-iceoryx2
datamancer-transport-iceoryx2 = { path = "../datamancer-transport-iceoryx2", optional = true }

# transport-ws
datamancer-transport-ws = { path = "../datamancer-transport-ws", optional = true }

# client-ws / client-iceoryx2
datamancer-client = { path = "../datamancer-client", optional = true, default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "crypto_ticker"
required-features = ["provider-alpaca"]

[[example]]
name = "client_session"
required-features = ["provider-alpaca"]

[[example]]
name = "cached_history"
required-features = ["storage-surreal"]

[[example]]
name = "tap_replay"
required-features = ["storage-surreal"]

[[example]]
name = "resume"
required-features = ["storage-surreal"]

[[test]]
name = "turso_tap_log"
required-features = ["storage-turso"]

[[test]]
name = "turso_crash"
required-features = ["storage-turso"]

[lints]
workspace = true
