[package]
name = "datamancer"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["provider-alpaca", "storage-turso"]
provider-alpaca = ["dep:oxidized_alpaca", "dep:chrono"]
storage-turso = ["dep:turso", "dep:serde", "dep:serde_json"]
transport-iceoryx2 = ["dep:datamancer-transport-iceoryx2"]
transport-ws = ["dep:datamancer-transport-ws"]
client-ws = ["dep:datamancer-client", "datamancer-client/ws"]
client-iceoryx2 = ["dep:datamancer-client", "datamancer-client/iceoryx2"]

[dependencies]
async-trait = "0.1"
datamancer-core = { path = "../datamancer-core", version = "0.7.0" }
fastrand = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = "0.1"

# provider-alpaca
oxidized_alpaca = { version = "0.0.10", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"], optional = true }

# storage-turso
turso = { version = "0.6", optional = true, default-features = false }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# transport-iceoryx2
datamancer-transport-iceoryx2 = { path = "../datamancer-transport-iceoryx2", version = "0.7.0", optional = true }

# transport-ws
datamancer-transport-ws = { path = "../datamancer-transport-ws", version = "0.7.0", optional = true }

# client-ws / client-iceoryx2
datamancer-client = { path = "../datamancer-client", version = "0.7.0", optional = true, default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "crypto_ticker"
required-features = ["provider-alpaca"]

[[example]]
name = "client_session"
required-features = ["provider-alpaca"]

[[example]]
name = "cached_history"
required-features = ["storage-turso"]

[[example]]
name = "tap_replay"
required-features = ["storage-turso"]

[[example]]
name = "resume"
required-features = ["storage-turso"]

[[test]]
name = "turso_cache"
required-features = ["storage-turso"]

[[test]]
name = "turso_tap_log"
required-features = ["storage-turso"]

[[test]]
name = "turso_crash"
required-features = ["storage-turso"]

[lints]
workspace = true
