[package]
name = "datamancerd"
version = "0.4.0"
edition = "2024"
publish = false
description = "Standalone datamancer server: same-host multi-client market-data daemon"

[features]
default = ["web-ui"]
# The embedded read-only introspection web UI + JSON API (Phase 6).
web-ui = [
    "dep:axum",
    "dep:tower-http",
    "dep:tower",
    "dep:arc-swap",
    "dep:maud",
    "dep:tokio-stream",
]
# A Prometheus `/metrics` endpoint derived from the same snapshot. Off by
# default until a scraper is deployed; usable independently of `web-ui` (the
# recorder installs without the UI; the `/metrics` route only registers when
# `web-ui` is also enabled).
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
# The remote WebSocket client surface (second transport worked example).
ws = ["dep:tokio-tungstenite", "datamancer/transport-ws"]

[dependencies]
datamancer = { path = "../datamancer", features = ["transport-iceoryx2"] }
datamancer-client = { path = "../datamancer-client", default-features = false }
datamancer-core = { path = "../datamancer-core" }
datamancer-credentials = { path = "../datamancer-credentials" }
async-trait = "0.1"
iceoryx2 = "0.9.2"
tokio = { workspace = true, features = ["signal", "io-util"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
# Safe flock(2) for the global single-instance lock (`fs`) and `geteuid` for
# the credential-op peer-cred gate (`process`). Already in the tree
# transitively.
rustix = { version = "1", features = ["fs", "process"] }

# Web UI / JSON API (feature `web-ui`).
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
arc-swap = { version = "1", optional = true }
maud = { version = "0.27", features = ["axum"], optional = true }
tokio-stream = { workspace = true, optional = true }

# WebSocket client surface (feature `ws`). Must match the transport-ws crate.
tokio-tungstenite = { version = "0.29.0", optional = true }

# Metrics (feature `metrics`).
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = [
    "tracing",
], optional = true }

[dev-dependencies]
datamancer-client = { path = "../datamancer-client", features = ["ws", "iceoryx2", "app"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
arc-swap = "1"
http-body-util = "0.1"
# `ws_e2e` graceful-shutdown test sends SIGTERM to the spawned daemon.
libc = "0.2"

[lints]
workspace = true
